--- a/lab6.ipynb
+++ b/lab6.ipynb
@@ -140,8 +140,256 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "721515bb-c26d-45ab-a1cd-b6586ca2853f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['lab7.1', 'lab7.2']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "path=\"/Users/almansurbajdildanov/PycharmProjects/Lab667/LAB7\"\n",
+    "all_items = os.listdir(path)\n",
+    "print(all_items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "27d4f703-dbfb-45d4-9d0e-21312933e230",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "only dir= photos \n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "path=\"/Users/almansurbajdildanov/PycharmProjects/Lab667/LAB7/lab7.1\"\n",
+    "allDirs = os.listdir(path)\n",
+    "for item in allDirs:\n",
+    "    if os.path.isdir(os.path.join(path,item)):\n",
+    "        print(f\"only dir= {item}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8f92ebf7-3b58-4c10-ab3e-11430ae4da3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "only file= task1.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "path=\"/Users/almansurbajdildanov/PycharmProjects/Lab667/LAB7/lab7.1\"\n",
+    "allDirs = os.listdir(path)\n",
+    "for item in allDirs:\n",
+    "    if  os.path.isfile(os.path.join(path,item)):\n",
+    "        print(f\"only file= {item}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "2bd20226-71b5-40a8-8445-f009930d972a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Путь существует: /Users/almansurbajdildanov/PycharmProjects/Lab667/LAB7/lab7.2/\n",
+      "Читаемый: Да\n",
+      "Записываемый: Да\n",
+      "Исполняемый: Да\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "path = \"/Users/almansurbajdildanov/PycharmProjects/Lab667/LAB7/lab7.2/\"\n",
+    "\n",
+    "\n",
+    "if os.path.exists(path):\n",
+    "    print(f\"Путь существует: {path}\")\n",
+    "\n",
+    "    print(f\"Читаемый: {'Да' if os.access(path, os.R_OK) else 'Нет'}\")\n",
+    "    print(f\"Записываемый: {'Да' if os.access(path, os.W_OK) else 'Нет'}\")\n",
+    "    print(f\"Исполняемый: {'Да' if os.access(path, os.X_OK) else 'Нет'}\")\n",
+    "else:\n",
+    "    print(f\"Путь не существует: {path}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "68fe983f-cd99-4f53-bf24-5e69302ea6a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Путь существует: /Users/almansurbajdildanov/PycharmProjects/Lab667/LAB7/lab7.2\n",
+      "Имя файла: lab7.2\n",
+      "Папка: /Users/almansurbajdildanov/PycharmProjects/Lab667/LAB7\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "path = \"/Users/almansurbajdildanov/PycharmProjects/Lab667/LAB7/lab7.2\"  \n",
+    "\n",
+    "if os.path.exists(path):\n",
+    "    print(f\"Путь существует: {path}\")\n",
+    "\n",
+    "   \n",
+    "    filename = os.path.basename(path)\n",
+    "    print(f\"Имя файла: {filename}\")\n",
+    "\n",
+    "   \n",
+    "    directory = os.path.dirname(path)\n",
+    "    print(f\"Папка: {directory}\")\n",
+    "else:\n",
+    "    print(\"Путь не существует.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "4f053847-ec77-478d-8cb4-defda3f98141",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_path=\"/Users/almansurbajdildanov/PycharmProjects/Lab667/Lab6/forTask4.txt\"\n",
+    "with open(file_path,\"r\") as a:\n",
+    "    line_counter=len(a.readlines())\n",
+    "print(line_counter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "33fe147a-3e3a-4386-803d-0627fbf789da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path=\"/Users/almansurbajdildanov/PycharmProjects/Lab667/Lab6/forTask5.txt\"\n",
+    "array=[\"apple\",\"banana\",\"chery\"]\n",
+    "\n",
+    "with open(file_path,\"w\") as file:\n",
+    "    for item in array:\n",
+    "        file.write(item+\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "4893d991-1ac1-4815-b3a0-073544eed55b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"file_names = [\"A.txt\", \"B.txt\", \"C.txt\", \"D.txt\", \"E.txt\", \"F.txt\", \"G.txt\", \n",
+    "              \"H.txt\", \"I.txt\", \"J.txt\", \"K.txt\", \"L.txt\", \"M.txt\", \"N.txt\", \n",
+    "              \"O.txt\", \"P.txt\", \"Q.txt\", \"R.txt\", \"S.txt\", \"T.txt\", \"U.txt\", \n",
+    "              \"V.txt\", \"W.txt\", \"X.txt\", \"Y.txt\", \"Z.txt\"]\n",
+    "\n",
+    "for file_name in file_names:\n",
+    "    with open(file_name, \"w\") as file:\n",
+    "        file.write(f\"This is file {file_name}\\n\")\"\"\"\n",
+    "print(\"Hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "409bbd96-3c1a-43fe-82a8-3bf4a3361e61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path=\"/Users/almansurbajdildanov/PycharmProjects/Lab667/Lab6/forTask4.txt\"\n",
+    "file_copy=\"/Users/almansurbajdildanov/PycharmProjects/Lab667/Lab6/forTask7.txt\"\n",
+    "with open(file_path,\"r\") as file:\n",
+    "    content=file.read()\n",
+    "    with open(file_copy,\"w\") as copy:\n",
+    "        copy.write(content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "f3b8a70d-b7e6-4949-8f38-60e583fc9d10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Введите путь к файлу:  lol\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Файл 'lol' не существует.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "file_path = input(\"Введите путь к файлу: \")\n",
+    "\n",
+    "if not os.path.exists(file_path):\n",
+    "    print(f\"Файл '{file_path}' не существует.\")\n",
+    "elif not os.access(file_path, os.W_OK):\n",
+    "    print(f\"Нет доступа для удаления файла '{file_path}'.\")\n",
+    "else:\n",
+    "    os.remove(file_path)\n",
+    "    print(f\"Файл '{file_path}' успешно удалён.\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8eb6b4c8-f211-4a17-a8db-3fba2a994e41",
    "metadata": {},
    "outputs": [],
    "source": []
